# rust-pkg-rpm

./: Cargo.toml  README.md  daemon-init.sh
.rpm/: rust-rpm-app.conf  rust-rpm-app.spec  rust-rpm-daemon.service  rust-rpm-daemon.spec
.rpm-app/: rust-pkg-rpm.info  rust-rpm-daemon.conf  rust-rpm-daemon.spec
etc/conf/: rust-rpm-daemon.conf
src/: main.rs
