[package]
name = "rust-rpm-app"
version = "0.1.0"
authors = ["soleinik <162591+soleinik@users.noreply.github.com>"]
edition = "2018"
description = "Rust app, RPM packaged"

categories = ["system"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
rust-rpm-app = { path = "/usr/local/bin/rust-rpm-app" }

[package.metadata.rpm.files]
"rust-rpm-app.conf" = { path = "/usr/local/etc/rust-rpm-app/rust-rpm-app.conf" }
"COPYRIGHT" = { path = "/usr/share/doc/rust-rpm-app/COPYRIGHT" }
"LICENSE" = { path = "/usr/share/doc/rust-rpm-app/LICENSE" }
"rust-rpm-app.info" = { path = "/usr/share/info/rust-rpm-app.info" }
